unpackaged/main/default/objects/EventApi__Event_Category__c/EventApi__Event_Category__c.object-meta.xml
<CustomObject>
    <description>Event Categories store the default presets and calendar display options unique to a group of Events.</description>
    <label>Event Category</label>
    <nameField>
        <label>Event Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>