unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Capacity__c</fullName>
    <description>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</description>
    <inlineHelpText>Maximum number of tickets that can be sold for the event. Required if &quot;Enable Waitlist&quot; is checked.</inlineHelpText>
    <label>Capacity / Ticket Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>