unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Optional description to display on pages that publish a calendar of Events related to the Event Category.</description>
    <inlineHelpText>Optional description to display on pages that publish a calendar of Events related to the Event Category.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>