unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Email_Notification_Text__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Email_Notification_Text__c</fullName>
    <description>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</description>
    <inlineHelpText>Replaces Event: Description. When attendees are registered by proxy, they receive an email notification about the event. This text is the body of that email. By default, the Event Name, Start Time, End Time, and Venue information are included.</inlineHelpText>
    <label>Email Notification Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>