unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Enable_Schedule_Items__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Schedule_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, enables schedule items for event Registration Styles that support them.</description>
    <inlineHelpText>When checked, enables schedule items for event Registration Styles that support them.</inlineHelpText>
    <label>Enable Schedule Items</label>
    <type>Checkbox</type>
</CustomField>