unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Enable_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</description>
    <inlineHelpText>When checked, attendees will have the option to be added to a waitlist once tickets are sold out.</inlineHelpText>
    <label>Enable Waitlisting</label>
    <type>Checkbox</type>
</CustomField>