unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Media_Asset_Collection__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Media_Asset_Collection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link between the Event Category and the Media Asset Collection.</description>
    <inlineHelpText>Link between the Event Category and the Media Asset Collection.</inlineHelpText>
    <label>Media Asset Collection</label>
    <referenceTo>PagesApi__Media_Asset_Collection__c</referenceTo>
    <relationshipLabel>Media Collection</relationshipLabel>
    <relationshipName>Media_Asset_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>