unpackaged/main/default/objects/EventApi__Event_Category__c/fields/EventApi__Registration_Instructions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Instructions__c</fullName>
    <description>Text appears above ticket type selection on event registration page.</description>
    <inlineHelpText>Text appears above ticket type selection on event registration page.</inlineHelpText>
    <label>Registration Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>