unpackaged/main/default/objects/EventApi__Event_Category__c/fields/Legacy_Event_Category_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Event_Category_ID__c</fullName>
    <label>Legacy Event Category ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>