unpackaged/main/default/objects/EventApi__Event_Category__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Business_Group__c</columns>
    <columns>EventApi__Registration_Style__c</columns>
    <columns>EventApi__Capacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>